--- a/styles/style.css
+++ b/styles/style.css
@@ -88,7 +88,7 @@ h3{
 }
 /* footer styles */
 footer{
-    margin: 40px 0px 20px 0px;
+    margin: 60px 30px 40px 30px;
 }
 footer div{
     display: flex;
@@ -132,7 +132,7 @@ footer div{
      media queries 
  --------------------*/
 
-/* smartphones and small devices */
+/* smartphones and small size devices */
 
 @media only screen and (max-width: 688px) {
     header, .all-players, .bottom-board, footer{
@@ -142,7 +142,7 @@ footer div{
         align-items: justify;
     }
 }
-/* tablet devices */
+/* tablet devices medium size devices*/
 @media only screen and (min-width: 689px) and (max-width: 992px) {
     header, .all-players, .bottom-board, footer{
         grid-template-columns: repeat(2, 1fr);
